[project]
name = "resr"
version = "1.0.0"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "opencv-python>=4.11.0.86",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "resselt>=1",
    "pepeline>=0.3.14",
    "typer>=0.16.0",
    "ruff>=0.11.13",
    "tqdm>=4.67.1",
    "chainner-ext>=0.3.10",
    "lefthook>=1.11.13",
]
