[project]
name = "resr"
version = "1.0.0"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "opencv-python>=4.11.0.86",
    "torch",
    "torchvision",
]

[project.optional-dependencies]
cu128 = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
cu126 = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
cu124 = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
cu118 = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "cu118" },
        { extra = "cu124" },
        { extra = "cu126" },
        { extra = "cu128" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", extra = "cu118", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-cu124", extra = "cu124", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu118", extra = "cu118", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-cu124", extra = "cu124", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "resselt>=1",
    "pepeline>=0.3.14",
    "typer>=0.16.0",
    "ruff>=0.11.13",
    "tqdm>=4.67.1",
    "chainner-ext>=0.3.10",
    "lefthook>=1.11.13",
]
