[project]
name = "resr"
version = "1.0.0"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
dependencies = [
    "opencv-python-headless>=4.10",
    "torch>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "resselt>=1",
    "pepeline>=0.3.14",
    "typer>=0.16.0",
    "ruff>=0.11.13",
    "tqdm>=4.67.1",
    "chainner-ext>=0.3.10",
    "lefthook>=1.11.13",
]

[tool.ruff]
line-length = 150
indent-width = 4
preview = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ['ALL']
fixable = ["ALL"]
ignore = ['ANN', 'COM812', 'CPY', 'D', "DOC", 'Q000', 'Q003', 'S101', 'PLR', 'FBT001', 'FBT002']

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["INP001"]
